2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Fix hyperlinks to table of contents in HTML doc.
	Reported by Akim Demaille <akim.demaille@gmail.com>.
	* doc/Makefile.am (libunistring_toc.html): Replace references to
	libunistring.html with references to libunistring_toc.html.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Make function declarations easier to read.
	* doc/uni*.texi: Inside the argument list of function declarations, use
	no-break spaces instead of spaces, except directly after a comma.
	* doc/libunistring.texi: Bump copyright year.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	build: Put the .sym file in the source directory.
	* lib/Makefile.am (libunistring.sym): Generate in the source directory.
	(config.h): Update rule.

2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Simplify the title page.
	* doc/libunistring.texi (titlepage): Remove redundant subtitle.

2019-02-10  Bruno Haible  <bruno@clisp.org>

	Update licenses.
	* doc/fdl.texi: Update from gnulib.
	* doc/gpl.texi: Likewise.
	* doc/lgpl.texi: Likewise.

2019-02-10  Bruno Haible  <bruno@clisp.org>

	Use a newer texinfo.tex.
	* autogen.sh (TEXINFO_VERSION): Bump to 6.5.
	Fetch texinfo.tex from the texinfo git repository instead of the
	obsolete texinfo CVS repository.

2019-02-04  Bruno Haible  <bruno@clisp.org>

	Remove left-over empty directories in 'make distclean'.
	* lib/Makefile.am (DISTCLEANDIRS, DISTCLEANDIRS_NOT_IN_SRCDIR): New
	variables.
	(distclean-local): New target.
	* tests/Makefile.am (distclean-local): New target.

2019-02-04  Bruno Haible  <bruno@clisp.org>

	Move run-test to gnulib.
	* autogen.sh: Copy build-aux/run-test from gnulib.
	* build-aux/run-test: Remove file.

2019-02-03  Bruno Haible  <bruno@clisp.org>

	Move declared.sh to gnulib.
	* autogen.sh: Copy lib/declared.sh from gnulib.
	* lib/declared.sh: Remove file.

2019-01-28  Bruno Haible  <bruno@clisp.org>

	Accommodate a shell that is not in /bin/sh.